# PygaMasher

./: .clang-format  CMakeLists.txt  LICENSE.md  PygaGui.glade  README.md  commandrunner.cpp  commandrunner.hpp  ffmpeg.hpp  imagereader.cpp  imagereader.hpp  imagewriter.cpp  imagewriter.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  rscodec.hpp  rsdecoder.cpp  rsdecoder.hpp  rsencoder.cpp  rsencoder.hpp
docs/: README.md
